--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button class="controls__button controls__button--close" type="button">Закрыть</button>
           </div>
         </div>
-        <iframe src="devices.html"></iframe>
+        <iframe src="devices.html" scrolling="no"></iframe>
       </div>
 
       <div class="filters__wrap filters__wrap--events" id="events">
@@ -68,7 +68,7 @@
             <button class="controls__button controls__button--close" type="button">Закрыть</button>
           </div>
         </div>
-        <iframe src="events.html"></iframe>
+        <iframe src="events.html" scrolling="no"></iframe>
       </div>
 
       <div class="filters__wrap" id="sessions">
@@ -91,7 +91,7 @@
             <button class="controls__button controls__button--close" type="button">Закрыть</button>
           </div>
         </div>
-        <iframe src="sessions.html"></iframe>
+        <iframe src="sessions.html" scrolling="no"></iframe>
       </div>
 
       <div class="filters__wrap" id="settings">
@@ -114,7 +114,7 @@
             <button class="controls__button controls__button--close" type="button">Закрыть</button>
           </div>
         </div>
-        <iframe src="settings.html"></iframe>
+        <iframe src="settings.html" scrolling="no"></iframe>
       </div>
 
       <div class="filters__wrap filters__wrap--map" id="maps">
@@ -126,7 +126,7 @@
             <button class="controls__button controls__button--close" type="button">Закрыть</button>
           </div>
         </div>
-        <iframe src="map.html"></iframe>
+        <iframe src="map.html" scrolling="no"></iframe>
       </div>
     </section>
 
